# QUICKLB

./: CMakeLists.txt  README  README.md  conda_env.yml  f2py_f2cmap  paper.md  pyproject.toml  setup.py
.github/workflows/: wheel.yml
docs/: Loadbalancer.rst  conf.py  examples.rst  index.rst  installation.rst  loadbalancer.rst
lb/: lb.f  lb_callback.fi  lb_comm.f  lb_debug.f  lb_fortran_api.f  lb_interface.f  lb_output.f  lb_partition.f  lb_python_api.f  lb_set_partition.f
quicklb/: __init__.py  cell.py  loadbalancer.py
tests/: loadbalance.info  test.py  test_array.py  test_loadbalancer.py  test_point.py  test_rd.py  x  y
